# privateagents-desktop

./: .env.example  .gitignore  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
.github/workflows/: build-windows.yml
public/docs/: legal.html
src/: middleware.ts  tauri.d.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  remote-universal.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: clipboard.rs  filesystem.rs  http_proxy.rs  mod.rs  notifications.rs  ollama.rs  shell.rs  system_info.rs
src/app/: globals.css  themes.css
src/app/[lang]/: layout.tsx  (+1 more)
src/components/: app-logo.tsx  error-boundary.tsx  language-dropdown.tsx  mode-dropdown.tsx  social-media-links.tsx  support-dialog.tsx  update-banner.tsx  workspace-file-viewer.tsx
src/configs/: auth-routes.ts  i18n.ts
src/data/: navigations.ts  notifications.ts  oauth-links.ts  social-links.ts  user.ts
src/hooks/: use-auth-status.ts  use-auto-update.ts  use-desktop-bridge.ts  use-event-invalidation.ts  use-permissions.ts  use-tauri.ts  use-unified-events.ts
src/lib/: api-config.ts  desktop-bridge.ts  fetch-with-auth.ts  get-dictionary.ts  permissions.ts  sse-reader.ts  tauri.ts  token-manager.ts  utils.ts
src/providers/: auth-provider.tsx  error-capture-provider.tsx  index.tsx  query-provider.tsx
src/schemas/: add-channel-instance-schema.ts  broadcast-message-schema.ts  cron-job-schema.ts  invite-user-schema.ts  register-schema.ts  routing-rule-schema.ts
src/test/: setup.ts  utils.tsx
(+292 files in other folders)
